set( LIBS_FOLDER ${CMAKE_SOURCE_DIR}/libs )
set( INCLUDES ${CMAKE_SOURCE_DIR}/include )

if ( APPLE )
    set( LIBS_FOLDER ${LIBS_FOLDER}/mac_os )
    set( INCLUDES ${INCLUDES}/mac )
elseif( UNIX )
    set( LIBS_FOLDER ${LIBS_FOLDER}/unix )
    set( INCLUDE_FOLDER ${INCLUDE_PATH}/unix )
elseif( WIN32 )
    set( LIBS_FOLDER ${LIBS_FOLDER}/win )
    set( INCLUDES ${INCLUDES}/win )
endif()

add_subdirectory(core)
add_subdirectory(net-snmp)
